--- a/tomonotomo/templates/tomonotomo/index.html
+++ b/tomonotomo/templates/tomonotomo/index.html
@@ -37,17 +37,17 @@
 
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>ask mutual friend to connect</h2>If you find someone attractive, you can request one of your mutual friends to connect with him/her. Since the relationship is originated by a trusted mediator, it forces both parties to be disciplined, honest and gentle.<br>
+				<h2>ask mutual friend <br/>to connect</h2>If you find someone attractive, you can request one of your mutual friends to connect with him/her. Since the relationship is originated by a trusted mediator, it forces both parties to be honest and gentle.<br>
 			</div>
 		</div>
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>connect & message directly</h2>If you do not want a mutual friend to know about your potential relationship, you can connect to him/her directly if he/she is on tomonotomo and explicitly given permission, but here again, because both the parties have explicit information regarding common friends, both the parties are disciplined due to social pressure<br>
+				<h2>connect & <br/>message directly</h2>If you do not want a mutual friend to know about your potential relationship, you can connect to him/her directly if he/she is on tomonotomo and explicitly given permission, but here again, because both the parties have explicit information regarding common friends, both the parties are honourable due to social pressure<br>
 			</div>
 		</div>
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>looks attractive</h2>You find someone attractive, and you do not want to initiate the conversation and be more passive. Just indicate that you find him/her attractive and we will connect you two only if he/she also finds you attractive<br>
+				<h2>looks <br/>attractive</h2>You find someone attractive, and you do not want to initiate the conversation and be more passive. Just indicate that you find him/her attractive and we will connect you two only if he/she also finds you attractive<br>
 			</div>
 		</div>
 		<div class="clear"></div>
