--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -124,7 +124,7 @@ mixpanel.init("00870579855cee982a5cc4d3f13ca9b4");</script><!-- end Mixpanel -->
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1398031667088132";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-like" data-href="http://www.facebook.com/tomonotomo" data-width="450" data-colorscheme="dark" data-show-faces="true" data-send="true"></div>
+<div class="fb-like" data-href="http://www.facebook.com/tomonotomo" data-width="450" data-colorscheme="light" data-show-faces="true" data-send="true"></div>
 	</div>
 	</div>
 </footer>
