--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -67,7 +67,7 @@
 
 		<div class="grid_4">
 			<div class="page_block" style="margin:0px">
-				<img src="https://graph.facebook.com/{{ fbid }}/picture?width=300" alt="" style="height:auto">
+				<img src="https://graph.facebook.com/{{ fbid }}/picture?width=300" alt="" style="width:99%;height:auto">
 				<div class="clear"></div>
 				<span style="text-align:center">
 					<a href="https://facebook.com/{{ fbid }}" target="_blank">{{ fullname }}'s Facebook Page</a>
