--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -121,7 +121,7 @@
 					</a>
 					<br class="br3"/><br class="br3"/>
 					<a id="feedback4" href="/tntAction/{{ fbid }}/4/0" class="btn friendbtn" title="Skip, do not show {{ fullname }} to me again and show next">
-					<h3 style="color:white">Pass, and never show</h3>
+					<h3 style="color:white">Skip, and never show</h3>
 					</a>
 					<br class="br4"/><br class="br4"/>
 					<a id="feedback5" href="/tntAction/{{ fbid }}/5/0" class="btn friendbtn" title="Skip and show next">
@@ -159,7 +159,7 @@
 				</div>
 				<div class="grid_4">
 					<div>
-						<div class="block">
+						<div class="block" style="background:none">
 							{% if mutualfriends %}
 								<span> Mutual Friends </span>
 								{% for mutualfriend in mutualfriends %}
