What's happening implemented

--- a/tomonotomo/templates/tomonotomo/loggedin.html
+++ b/tomonotomo/templates/tomonotomo/loggedin.html
@@ -25,6 +25,19 @@
                     <br/><br/><a href="{% url "friendrandom" %}" class="btn btn-large"><h3 style="color:white">Start Anyway</h3></a>
                 {% endif %}    
             {% endif %}
+	
+		{% if number_new_introduction|add:number_new_introductions|add:number_new_attractive > 0 %}
+		We have missed you and so have many people. People have been talking about you since you last loggedin ;) 
+			{% if number_new_introductions %}
+				{{ number_new_introductions }} friends of friends asked your mutual friends if they could connect to you. 
+			{% endif %}
+			{% if number_new_connect_directly %}
+				{{ number_new_connect_directly }} friends of friends connected with you directly and you would have got the emails.
+			{% endif %}
+			{% if number_new_attractive %}
+				{{ number_new_attractive }} friends of friends found you attractive and are waiting for you to discover them :)
+			{% endif %}
+		{% endif %}
 			</div>
             <br/>
 
