--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -116,8 +116,8 @@
 					</a>
 					<br class="br2"/><br class="br2"/>
 					{% endif %}
-                        		<a id="feedback3" href="/tntAction/{{ fbid }}/3/0" class="btn friendbtn" title="Sends email to you and {{ fullname }} only if both of you find each other attractive">
-					<h3 style="color:white">Looks Attractive</h3>
+                        		<a id="feedback3" href="/tntAction/{{ fbid }}/3/0" class="btn friendbtn" title="Sends email to you and {{ fullname }} only if both of you admire each other">
+					<h3 style="color:white">Admire Secretly</h3>
 					</a>
 					<br class="br3"/><br class="br3"/>
 					<a id="feedback4" href="/tntAction/{{ fbid }}/4/0" class="btn friendbtn" title="Skip, do not show {{ fullname }} to me again and show next">
