--- a/tomonotomo/templates/tomonotomo/index.html
+++ b/tomonotomo/templates/tomonotomo/index.html
@@ -18,7 +18,7 @@
 		</div>
 
        	<div class="grid_4">
-			<h2>Connect only with Friends of Friends</h2>
+			<h2>Connect with Friends of Friends</h2>
             <h3>We are revolutionising the way dating happens. Be a part of it.<br/><span style="font-size:140%;color:#302b32">{{ usersdatalen }}</span> men and women are here already</span></h3><br/>
 			{% if not user.id %}
                 <a href="{% url "socialauth_begin" "facebook" %}" class="btn btn-large"><h3 style="color:white">Connect via Facebook</h3></a><br/><br/>
@@ -37,17 +37,17 @@
 
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>ask mutual friend <br/>to connect</h2>If you find someone attractive, you can request one of your mutual friends to connect with him/her. Since the relationship is originated by a trusted mediator, it forces both parties to be honest and gentle.<br>
+				<h2>ask mutual friend <br/>to connect</h2>Like someone with a close mutual friend? You can request your mutual friend to connect with him/her. You meet potential dates who can be vouched for by mutual friends<br>
 			</div>
 		</div>
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>connect & <br/>message directly</h2>If you do not want a mutual friend to know about your potential relationship, you can connect to him/her directly if he/she is on tomonotomo and explicitly given permission, but here again, because both the parties have explicit information regarding common friends, both the parties are honourable due to social pressure<br>
+				<h2>connect & <br/>message directly</h2>Like someone but do not want the mutual friend to connect? You can connect to him/her directly if he/she is on tomonotomo. Its safe and honourable as only friends of friends can connect with you<br>
 			</div>
 		</div>
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>looks <br/>attractive</h2>You find someone attractive, and you do not want to initiate the conversation and be more passive. Just indicate that you find him/her attractive and we will connect you two only if he/she also finds you attractive<br>
+				<h2>admire <br/>secretly</h2>Like someone but do not want to say it loud? You can indicate that you admire him/her and we will connect you two only if they admire you too<br>
 			</div>
 		</div>
 		<div class="clear"></div>
