--- a/tomonotomo/templates/tomonotomo/loggedin.html
+++ b/tomonotomo/templates/tomonotomo/loggedin.html
@@ -35,8 +35,8 @@
 			{% if number_new_connect_directly|add:"0" > 0 %}
 				<br/>{{ number_new_connect_directly }} friends of friends connected with you directly and you would have got the emails.
 			{% endif %}
-			{% if number_new_attractive|add:"0" > 0 %}
-				<br/>{{ number_new_attractive }} friends of friends found you attractive and are waiting for you to discover them :)
+			{% if number_new_admire|add:"0" > 0 %}
+				<br/>{{ number_new_admire }} friends of friends admire you and are waiting for you to discover them :)
 			{% endif %}
 		<br/>Have fun :)
 		</span>
