--- a/tomonotomo/templates/tomonotomo/index.html
+++ b/tomonotomo/templates/tomonotomo/index.html
@@ -37,12 +37,12 @@
 
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>ask mutual friend <br/>to connect</h2>Like someone with a close mutual friend? You can request your mutual friend to connect with him/her. You meet potential dates who can be vouched for by mutual friends<br>
+				<h2>ask mutual friend <br/>to connect</h2>Like someone with a close mutual friend? You can request your mutual friend to connect with him/her. You meet people who are vouched for by mutual friends<br>
 			</div>
 		</div>
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>connect & <br/>message directly</h2>Like someone but do not want the mutual friend to connect? You can connect to him/her directly if he/she is on tomonotomo. Its safe and honourable as only friends of friends can connect with you<br>
+				<h2>connect & <br/>message directly</h2>Like someone but do not want the mutual friend to connect? You can connect to him/her directly. Its safe and honourable as only friends of friends can connect with you<br>
 			</div>
 		</div>
 		<div class="grid_4">
