--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -106,7 +106,7 @@
 					<div>
                         {% if user.id %}
 				{% if show_button %}
-					<a rel="leanModal" name="lean_overlay" href="#lean_overlay" id="feedback1" class="btn friendbtn" title="Sends an email to you and a friend you choose requesting for an introduction to {{ fullname }}">
+					<a rel="leanModal" name="lean_overlay" href="#lean_overlay" id="feedback1" class="btn friendbtn" title="Sends an email to a friend you choose requesting for an introduction to {{ fullname }}">
 						<h3 style="color:white">Ask friend for Introduction</h3>
 					</a>
 					<br class="br1"/><br class="br1"/>
@@ -116,7 +116,7 @@
 					</a>
 					<br class="br2"/><br class="br2"/>
 					{% endif %}
-                        		<a id="feedback3" href="/tntAction/{{ fbid }}/3/0" class="btn friendbtn" title="Sends email to you and {{ fullname }} only if both of you admire each other">
+                        		<a id="feedback3" href="/tntAction/{{ fbid }}/3/0" class="btn friendbtn" title="Sends email connecting you and {{ fullname }} only if both of you admire each other">
 					<h3 style="color:white">Admire Secretly</h3>
 					</a>
 					<br class="br3"/><br class="br3"/>
