--- a/tomonotomo/templates/tomonotomo/index.html
+++ b/tomonotomo/templates/tomonotomo/index.html
@@ -37,17 +37,17 @@
 
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>ask mutual friend <br/>to connect</h2>Like someone with a close mutual friend? You can request your mutual friend to connect with him/her. You meet people who are vouched for by mutual friends<br>
+				<h2>ask mutual <br/>friend to connect</h2>Like someone with a close mutual friend? Request your friend to connect you with him/her & meet people who are vouched for by mutual friends<br>
 			</div>
 		</div>
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>connect & <br/>message directly</h2>Like someone but do not want the mutual friend to connect? You can connect to him/her directly. Its safe and honourable as only friends of friends can connect with you<br>
+				<h2>connect & <br/>message directly</h2>Like someone and want to connect directly? Its safe and honourable as only friends of friends can connect with you<br>
 			</div>
 		</div>
 		<div class="grid_4">
 			<div class="pad1">
-				<h2>admire <br/>secretly</h2>Like someone but do not want to say it loud? You can indicate that you admire him/her and we will connect you two only if they admire you too<br>
+				<h2>admire <br/>secretly</h2>Like someone but don't want to say it loud? Just indicate that you admire him/her and we will connect you two only if they admire you too<br>
 			</div>
 		</div>
 		<div class="clear"></div>
