Profile page implementation

--- a/tomonotomo/templates/tomonotomo/email-source.html
+++ b/tomonotomo/templates/tomonotomo/email-source.html
@@ -471,7 +471,7 @@
                                                     <tbody><tr mc:repeatable="">
                                                         <td valign="top" style="text-align:center">                                                           <img src="{{ leftimage }}" style="max-width:260px;" mc:label="image" mc:edit="tiwc300_image00">
                                                             <div mc:edit="tiwc300_content00">
- 	                                                           <h4 class="h4"><a href="http://www.tomonotomo.com/friend/{{ leftid }}" target="_blank">{{ lefttitle }}</a></h4>
+ 	                                                           <h4 class="h4"><a href="http://www.tomonotomo.com/profile/tomonotomo/{{ leftid }}" target="_blank">{{ lefttitle }}</a></h4>
                                                                	{{ leftcontent }}
                                                             </div>
                                                         </td>
@@ -488,7 +488,7 @@
                                                         <td valign="top" style="text-align:center">
                                                             <img src="{{ rightimage }}" style="max-width:260px;" mc:label="image" mc:edit="tiwc300_image01">
                                                             <div mc:edit="tiwc300_content01">
- 	                                                           <h4 class="h4"><a href="http://www.tomonotomo.com/friend/{{ rightid }}" target="_blank">{{ righttitle }}</a></h4>
+ 	                                                           <h4 class="h4"><a href="http://www.tomonotomo.com/profile/tomonotomo/{{ rightid }}" target="_blank">{{ righttitle }}</a></h4>
                                                                	{{ rightcontent }}
                                                             </div>
                                                         </td>
