--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -1,6 +1,10 @@
 {% extends "tomonotomo/base.html" %}
 {% load staticfiles %}
 
+{% block titlecontent %}
+{{ title }}
+{% endblock %}
+
 {% block bodycontent %}
 
 
@@ -163,7 +167,7 @@
 							{% if mutualfriends %}
 								<span> Mutual Friends </span>
 								{% for mutualfriend in mutualfriends %}
-									{{ mutualfriend.name }}<br/>
+									<a href="/profile/{{mutualfriend.name|slugify}}/{{mutualfriend.id}}" target="_blank">{{ mutualfriend.name }}<a/><br/>
 								{% endfor %}
 							{% endif %}
 						</div>
