--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -115,7 +115,7 @@ mixpanel.init("00870579855cee982a5cc4d3f13ca9b4");</script><!-- end Mixpanel -->
 <footer>
 	<div class="container_12">
 		<div class="grid_6">
-			Tomonotomo © 2013| <a href='{% url "index" %}'>Home</a> | <a href='{% url "about" %}'>About</a> | <a href='{% url "terms" %}'>Terms</a> 
+			Tomonotomo © 2013| <a href='{% url "index" %}'>Home</a> | <a href='{% url "about" %}'>About</a> | <a href='{% url "terms" %}'>Terms</a> | <a href='{% url "sitemap" %}'>Sitemap</a> | <a href='http://www.tomonotomo.wordpress.com'>Blog</a> 
 </div>
 <div class="grid_6" style="text-align:right">
 <div id="fb-root"></div>
