--- a/tomonotomo/templates/tomonotomo/sitemap.html
+++ b/tomonotomo/templates/tomonotomo/sitemap.html
@@ -17,7 +17,7 @@
 <div class="container_12">
 
 {% for sitemap in sitemaplist %}
-	<a href="http://www.tomonotomo.com/sitemap/{{ sitemap|add:"0" }}">Tomonotomo Sitemap {{ sitemap|add:"0" }}</a>
+	<a href="http://www.tomonotomo.com/sitemap/{{ sitemap|add:"0" }}">Tomonotomo {{ sitemap|add:"0" }}</a>
 {% endfor %}
 
 </div>
