--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -11,6 +11,7 @@
 
 
 <link rel="stylesheet" type="text/css" media="screen" href="{% static 'tomonotomo/css/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'tomonotomo/css/jquery.gritter.css' %}">
 <link media="screen" type="text/css" href="{% static 'tomonotomo/css/kwicks-slider.css' %}" rel="stylesheet">
 
 <link rel="icon" type="image/png" href="{% static 'tomonotomo/img/favicon.ico' %}">
@@ -25,6 +26,7 @@
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.horizontalNav.js' %}"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.flexslider.js' %}"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.leanModal.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.gritter.js' %}"></script>
 <script>
   $(window).load(function() { 
 		$('.full-width').horizontalNav({});
