--- a/tomonotomo/templates/tomonotomo/loggedin.html
+++ b/tomonotomo/templates/tomonotomo/loggedin.html
@@ -28,7 +28,7 @@
 	
 		{% if show_happening|add:"0" > 0 %}
 		<br/><br/>
-		<span style="font-size:120%">People have been talking about you while you were not here ;) 
+		<span style="font-size:120%">People have been talking about you while you were not here ;)<br/> 
 			{% if number_new_introductions|add:"0" > 0 %}
 				<br/>{{ number_new_introductions }} friends of friends asked your mutual friends if they could connect to you. 
 			{% endif %}
