--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -201,7 +201,7 @@
 $(window).load(function(){
 	{% if notify_invite_friends %}
 	$.gritter.add({
-		title: '<br/>Help Tomonotomo to help you better',
+		title: '<br/>Help Tomonotomo be more awesome',
 		text: 'Not finding the right match in your friend of friend network because you do not have a lot of friends on tomonotomo? To expand your reach and possibly find a match, <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com" target="_blank">"Invite your Friends"</a> on board',
 		class_name: 'gritter-light',
 		time: 10000
@@ -209,10 +209,18 @@ $(window).load(function(){
 	{% endif %}
         {% if notify_hover_on_button %}
         $.gritter.add({
-                title: '<br/>Help Tomonotomo to help you better',
+                title: '<br/>Help Tomonotomo be more awesome',
                 text: 'You are skipping profiles a lot. Having trouble understanding the options? Please hover on the buttons and spend 5 seconds to understand us. Please let us serve you better',
 		class_name: 'gritter-light',
 		time:10000
+        });
+        {% endif %}
+        {% if notify_welcome %}
+        $.gritter.add({
+                title: '<br/>Welcome to Tomonotomo',
+                text: 'Lets get the party started! We are showing you matches from your friend of friend network for a safe and honourable dating experience. If its not intuitive, please hover on the buttons and spend 5 seconds to understand us. Best of Luck!',
+                class_name: 'gritter-light',
+                time:10000
         });
         {% endif %}
 
