--- a/tomonotomo/templates/tomonotomo/dbsummary.html
+++ b/tomonotomo/templates/tomonotomo/dbsummary.html
@@ -19,11 +19,11 @@
 		{% endfor %}
 	    <br/>Users loggedin in last 24 hours: ({{ dbsummary_users_login_24 | length }})<br/>
 		{% for dbuser in dbsummary_users_login_24 %}
-			{{ dbuser.userlogin }} - {{ dbuser.timestamp }} CDT<br/>
+			<a href="http://www.tomonotomo.com/friend/{{ dbuser.userlogin }}" target="_blank">{{ dbuser.userlogin }}</a> - {{ dbuser.timestamp }} CDT<br/>
 		{% endfor %}
 	    <br/>Users registerd in last 24 hours: ({{ dbsummary_users_register_24 | length }})<br/>
                 {% for dbuser in dbsummary_users_register_24 %}
-                        {{ dbuser }} <br/>
+                        <a href="http://www.tomonotomo.com/friend/{{ dbuser }}" target="_blank">{{ dbuser }}</a><br/>
                 {% endfor %}
 	    <br/>Users: ({{ dbsummary_users | length }})<br/>
                 {% for dbuser in dbsummary_users %}
