--- a/tomonotomo/templates/tomonotomo/loggedin.html
+++ b/tomonotomo/templates/tomonotomo/loggedin.html
@@ -15,7 +15,7 @@
             <div>
             <span style="font-size: 150%">"{{ degree1 }}"</span> friends in your network are on tomonotomo<br/><br/>
             {% if degree1|add:"0" > 2 %}
-                You have access to <span style="font-size: 150%">"{{ degree2 }}"</span> friends in degree 2 network.<br/><br/>
+                You have access to <span style="font-size: 150%">"{{ degree2 }}"</span> friends of friends.<br/><br/>
                 <a href="{% url "fofrandom" %}" class="btn btn-large"><h3 style="color:white">Start</h3></a>
             {%  else %}
                 You need to have at least <span style="font-size: 150%">"3"</span> friends on tomonotono so that we can build a dense social graph.
