--- a/tomonotomo/templates/tomonotomo/dbsummary.html
+++ b/tomonotomo/templates/tomonotomo/dbsummary.html
@@ -21,7 +21,7 @@
 		{% for dbuser in dbsummary_users_login_24 %}
 			<a href="http://www.tomonotomo.com/friend/{{ dbuser.userlogin }}" target="_blank">{{ dbuser.userlogin }}</a> - {{ dbuser.timestamp }} CDT<br/>
 		{% endfor %}
-	    <br/>Users registerd in last 24 hours: ({{ dbsummary_users_register_24 | length }})<br/>
+	    <br/>Users registered in last 24 hours: ({{ dbsummary_users_register_24 | length }})<br/>
                 {% for dbuser in dbsummary_users_register_24 %}
                         <a href="http://www.tomonotomo.com/friend/{{ dbuser }}" target="_blank">{{ dbuser }}</a><br/>
                 {% endfor %}
