--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -70,7 +70,7 @@ mixpanel.init("00870579855cee982a5cc4d3f13ca9b4");</script><!-- end Mixpanel -->
 				<div style="font-size:65px;color:black;float:left;vertical-align:bottom;white-space:nowrap"><a href="/home">tomonotomo<span style="font-size:20%;color:black">(alpha)</span></a></div>
 				<div class="links">
 					{% if user.id %}
-						{{ user.first_name }} - <a href="/logout">Logout</a>
+						<a href="/profile" target="_blank">{{ user.first_name }}</a> - <a href="/logout">Logout</a>
 					{% else %}
 						Have an account? <a href="{% url "socialauth_begin" "facebook" %}">Sign in</a> or <a href="{% url "socialauth_begin" "facebook" %}">Sign up</a>
 					{% endif %}
